fix duplicate focused options and scrollbar

--- a/src/app/common/modals/modals.less
+++ b/src/app/common/modals/modals.less
@@ -488,13 +488,15 @@
             .list-container-inner {
                 width: 100%;
                 max-height: 300px;
-                overflow-y: hidden;
+                overflow-y: scroll;
                 padding: 0 20px;
 
-                &:focus,
-                &:hover {
-                    overflow-y: overlay;
-                    padding-right: 16px;
+                &::-webkit-scrollbar-thumb {
+                    display: none;
+                }
+
+                &:hover::-webkit-scrollbar-thumb {
+                    display: block;
                 }
 
                 .options-list {
